--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   },
   "dependencies": {
     "@google/genai": "^1.34.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "cordova-plugin-purchase": "^13.11.0"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "cordova-plugin-purchase": "^13.12..1"
   },
   "devDependencies": {
     "@capacitor/android": "^6.2.0",
@@ -28,6 +28,6 @@
     "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^4.3.1",
     "typescript": "^5.5.3",
-    "vite": "^5.4.1"
+    "vite": "^6.1.6"
   }
 }
