--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "napoleon-hill-ai",
   "private": true,
@@ -15,9 +14,9 @@
   },
   "dependencies": {
     "@google/genai": "^1.34.0",
+    "cordova-plugin-purchase": "^13.12.1",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "cordova-plugin-purchase": "^13.12..1"
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@capacitor/android": "^6.2.0",
@@ -28,6 +27,6 @@
     "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^4.3.1",
     "typescript": "^5.5.3",
-    "vite": "^6.1.6"
+    "vite": "^6.4.1"
   }
 }
